// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Headings Section Title 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <h2
      class="sc-AxgMl hWPmHw"
      font-size="26px"
      font-weight="500"
    >
      Section Title
    </h2>
  </div>
</div>
`;

exports[`Storyshots Headings Subsection Title 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <h3
      class="sc-AxheI sc-Axmtr iUwHNi"
      font-size="20px"
      font-weight="500"
    >
      SubsectionTitle
    </h3>
  </div>
</div>
`;

exports[`Storyshots Headings Title 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <h1
      class="sc-AxhUy jXBjWt"
      font-size="46px"
      font-weight="300"
    >
      Title
    </h1>
  </div>
</div>
`;

exports[`Storyshots Headings With a custom margin 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <h1
      class="sc-AxhUy ichuyd"
      font-size="46px"
      font-weight="300"
    >
      Title
    </h1>
    <p
      class="sc-AxhCb hpmHVQ"
      color="currentColor"
      font-size="16px"
    >
      Lorem ipsum
    </p>
  </div>
</div>
`;
